Partial fixes to introduction

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -38,7 +38,16 @@ In this chapter, I argue instead for an activity-grounded conception of lifeform
 
 \section{Introduction}
 
-I use the term \enquote{lifeform} here \dash a term that Spinoza never uses \dash because this chapter is ultimately concerned with the action-theoretic context. To the extent to which my reading works for lifeform, though, it should extend more or less straightforwardly to \enquote{species} \dash a term that Spinoza does \emph{occasionally} use.
+In action-theoretic \dash and, broadly speaking, biological \dash contexts, lifeforms are invoked in order to explain, in various ways, what a thing does.\footnote{I use the term \enquote{lifeform} here \dash a term that Spinoza never uses \dash because this chapter is ultimately concerned with the action-theoretic context. To the extent to which my reading works for lifeform, though, it should extend more or less straightforwardly to certain senses of \enquote{species}, and somewhat less straightforwardly, \enquote{form} \dash terms that Spinoza does \emph{occasionally} use in appropriate contexts.}
+Humans do what they do, in the ways that they do, because of an underlying lifeform. Ants do very different things, very differently, from us because their lifeform differs significantly from ours. The lifeform is the background against which actions make sense. It makes a lot of sense for a human to, say, change a light bulb; for an ant, that would be a little strange. This can be cashed out in various ways \dash in terms of the role of artificial light in current human life, in terms of our opposable thumbs that allow us to actually get hold of the thing to change it, and so on. In these contexts, when we talk about lifeforms, we talk about them as the grounds of actions.
+
+There are some good reasons to see something like this lifeform concept as being at work in Spinoza's system, especially when he makes claims such as, \textquote[E4App\RN{9}]{\textins*{n}othing can agree more with the nature of any thing than other individuals of the same species}, or many of his references to \enquote{form}. But Spinoza endorses gradualism about bodies: there are no hard boundaries between natural kinds, and no ontological resources to institute them. So there is some puzzle about the role of these notions in what we might broadly, and inaccurately, call Spinoza's philosophy of action that warrants addressing. That's an issue of what the notion of lifeform can do for a reading of Spinoza; there is also the issue of what Spinoza can do for the notion of lifeform.
+
+Work on lifeforms in philosophy usually starts from a broadly Aristotelian framework, and usually assumes some non-trivial degree of essentialism: humans do humane things becomes of some underlying essential human lifeform; sharks do sharkish things because of some underlying essential shark lifeform; etc. Analysis of action in terms of lifeform is useful, but it would be nice if it could come without essentialist commitments attached. Spinoza's gradualism undermines essentialism. This is precisely the reason that the role played by lifeforms in his system is so difficult to pin down: intuitively, lifeforms seem as though they should entail essence; to seek them out in a non-essentialist context seems like a category mistake. So if Spinoza does indeed have a coherent conception of lifeform that is capable of playing an appropriate action-theoretic role, it breaks the expected entailment from lifeform to essence. And, if so, Spinoza gives us a non-essentialist way of addressing and employing lifeforms. For exactly the reason that the issue of lifeform in Spinoza's system is tricky, it is productive.
+
+What are the features of a non-essentialist notion of lifeform?\todo{Fill out}
+
+In the Aristotelian framework, you get lifeforms for free, as part of the basic ontology. Consequently, you don't need to find something else to which to reduce them. In a mechanistic framework, by contrast, you won't find lifeforms anywhere within the fundamental ontology: you have to build them out of more fundamental entities; whatever a lifeform is, it's going to have to be reducible to something else. The obvious place to look for a reductionist account is morphology.
 
 I am also not going to go into the much broader issue of essences in general in Spinoza's system. The question at stake in this chapter is, if there is something like a lifeform, in particular, in the system, what does it consist in? What can we point to in the world and say \enquote{that right there: that's a lifeform}? There are two gotchas in trying to answer that question. One is Spinoza's denial of real universals: there is no entity that is distributed throughout all humans that makes them human. So, if we are to find a lifeform, we can find it only in the particulars. Second, there is Spinoza's gradualism about bodies: all change happens along a continuum, with no hard boundaries between one kind of body and another; that is, there are no real natural kinds of body. This is a problem because the obvious answer to the question of lifeform would be something about the morphology of bodies, but if the morphology of bodies is continuous, it is not clear what ontological resources there could be to build up a sufficiently robust notion of lifeform on that basis.
 
@@ -46,27 +55,15 @@ The most likely candidates for a morphological reading seem to be morphological 
 
 I am not going to argue that there is no workable way whatsoever to ground a notion of lifeform in morphology for Spinoza; indeed Tropper's chapter\todo{I think! I haven't read the latest version yet. Sorry, Sarah, if I'm making stuff up here} in this volume goes somewhat in that direction. Rather, I am going to argue for an alternative possibility: there are useful resources for grounding lifeform to be found in activities \dash the stuff that singular things \emph{do} \dash and an activities-grounded reading fits well with the textual evidence and the ways in which Spinoza employs something-like-a-lifeform. Moreover, and ultimately more germane to my purposes here, an activities-grounded reading allows for a non-essentialist conception of lifeform, in which lifeforms get to be real and non-trivial aspects of the world, while still being fundamentally mutable.
 
-One initial issue is what actually counts as a \enquote{lifeform} for Spinoza. As the introduction to this volume points out, it's not a term he uses, but there are some good reasons to see something like the concept as being at work in his system, especially when he makes claims such as, \textquote[E4App\RN{9}]{\textins*{n}othing can agree more with the nature of any thing than other individuals of the same species}, or many of his references to \enquote{form}. But Spinoza endorses gradualism about bodies: there are no hard boundaries between natural kinds, and no ontological resources to institute them. So there is some puzzle about the role of these notions in what we might broadly, and inaccurately, call Spinoza's philosophy of action that warrants addressing. That's an issue of what the notion of lifeform can do for a reading of Spinoza; there is also the issue of what Spinoza can do for the notion of lifeform.
-
-Work on lifeforms in philosophy usually starts from a broadly Aristotelian framework, and usually assumes some non-trivial degree of essentialism: humans do humane things becomes of some underlying essential human lifeform; sharks do sharkish things because of some underlying essential shark lifeform; etc. Analysis of action in terms of lifeform is useful, but it would be nice if it could come without essentialist commitments attached. Spinoza's gradualism undermines essentialism. This is precisely the reason that the role played by lifeforms in his system is so difficult to pin down: intuitively, lifeforms seem as though they should entail essence; to seek them out in a non-essentialist context seems like a category mistake. So if Spinoza does indeed have a coherent role for lifeforms to play, it breaks the expected entailment from lifeform to essence, providing a basis for a non-essentialist conception. For exactly the reason that the issue of lifeform in Spinoza's system is tricky, it is productive\todo{Not the right word}.
-
-What are the features of a non-essentialist notion of lifeform?\todo{Fill out}
-
-In the Aristotelian framework, you get lifeforms for free, as part of the basic ontology. Consequently, you don't need to find something else to which to reduce them. In a mechanistic framework, by contrast, you won't find lifeforms anywhere within the fundamental ontology: you have to build them out of more fundamental entities; whatever a lifeform is, it's going to have to be reducible to something else. The obvious place to look for a reductionist account is morphology.
-
 It might seem strange to ground something like lifeform in something like activity. Typically, we think of activities as derivatives of more fundamental entities. We tend to think of them as \emph{changes} in \emph{bodies}, and we tend to think that the bodies persist while their activities change. On this understanding, activities are both ontologically posterior to bodies and, more or less, ephemeral, making them a seemingly rather poor choice as grounds for anything much at all. More specifically, and perhaps tellingly, we tend to think of activities as \dash or on the model of \dash modes of substances. If we think of bodies as substances, then of course we would expect bodies to be grounds. And, if a lifeform is some kind of constraint to activity, of course the notion of activities as grounds would look incoherent. Within a lot of frameworks, the substantival model of body–activity relations is apt enough: it obviously works for the Aristotelian framework, is canonical for the Cartesian framework, and seems to track most materialisms and physicalisms.
 
-It's not clear, though, that this is an intuition that ought to apply to Spinoza's system, where bodies and activities are equally modal. While an argument could presumably be made that (modal) activities are still supposed to be only derivative of (modal) bodies, there does not seem to be anything in Spinoza's system to compel that reading, beyond trying to preserve our intuitions; nor does there seem to be much to support such a reading. Consequently, for the sake of this chapter, I'll assume that bodies and activities are modes fundamentally on the same level, and that, whatever a lifeform might be, it can just as plausibly be grounded in activity as in body.
+It's not clear, though, that this is an intuition that ought to apply to Spinoza's system, where bodies and activities are equally modal. While an argument could presumably be made that (modal) activities are still supposed to be only derivative of (modal) bodies, there does not seem to be anything in Spinoza's system to compel that reading, beyond trying to preserve our intuitions; nor does there seem to be much to support such a reading. Indeed, if conatus is understood dynamically, then such priority relations cannot obtain (see \cref{sec:Agreement}). Consequently, for the sake of this chapter, I'll assume that bodies and activities are modes fundamentally on the same level, and that, whatever a lifeform might be, it can just as plausibly be grounded in activity as in body.
 
 Trying to talk about what something \emph{does} is oddly tricky in Spinoza's system. Spinoza talks about \enquote{actions}, but, strictly speaking, Spinozistic actions can only be \enquote{doings} that are grounded in reason; \enquote{action} is too narrow a category for my purposes here. Conceptually, \enquote{motions} would probably do the job, but the term is intuitively jarring: intuitively, we tend to think of motion purely in terms of local motion; this chapter is about more than just local motion, so what's \emph{connoted} is again too narrow, even if \enquote{motion} does denote the correct set of things in principle. It's for these reasons that I've gone with \enquote{activities}. By \enquote{activity}, I mean simply what things do, or modal change, and I mean to avoid the restrictive implications of \enquote{actions} and \enquote{motions}, while incurring as little linguistic awkwardness as possible.
 
 There are at least two, related, issues raised by this use of \enquote{activity}. First, if an activity is what something does, this sounds suspiciously substantival: there is some \emph{thing} that does some \emph{activity}. If what we're concerned with is specifically the activity \emph{of} things, then the things look very much as though they ought to be the grounds again. Here, I argue that, while particular activities are necessarily in relation with particular bodies, and while the particularity of both is salient to the role of lifeform, this does not in any way mean that the bodies involved have ontological priority over the activities involved.
 
-The second issue is that, if the term \enquote{activity} allows for a wider scope than \enquote{action}, then it looks as though we are allowing externally-determined motions into the picture, which seems to go against at least some of what Spinoza says about activity in relation to something-like-a-lifeform. This is a feature, not a bug. (And I argue as much in \cref{sec:Reason}.) To assume that the relevant activities for grounding a lifeform are only those that are internally determined is to beg the question on the essentialist's behalf: it's to assume that only what follows from the essence of a thing is informative about its lifeform.\todo{This is very not good}
-
-% \section{Lifeform and morphology}\label{sec:Morphology}
-
-- Complexity – but where to draw the line, and what kind of complexity?
+The second issue is that, if the term \enquote{activity} allows for a wider scope than \enquote{action}, then it looks as though we are allowing externally-determined motions into the picture, which seems to go against at least some of what Spinoza says about activity in relation to something-like-a-lifeform. This is a feature, not a bug. (And I argue as much in \cref{sec:Mutuality}.) To assume that the relevant activities for grounding a lifeform are only those that are internally determined is to beg the question on the essentialist's behalf: it's to assume that only what follows from the essence of a thing is informative about its lifeform.
 
 \section{Lifeform and agreement}\label{sec:Agreement}
 Spinoza uses something like a notion of lifeform most explicitly in Part Four of the \texttitle{Ethics}, in the context of the discussion of inter-human relations. In the appendix to Part Four, he claims that \blockquote[E4app\RN{9}]{\textins*{n}othing can agree \textins{\foreign{latin}{convenire}} more with the nature of any thing than other individuals of the same species}. A natural reading of this passage \dash that is, a natural reading given substantivalist intuitions \dash might be that there is some phenomenon called \enquote{agreement} that is grounded in some property called \enquote{species}: on this reading, \enquote{species} preexists, and is more fundamental than, \enquote{agreement}, such that we can have species without actual agreement (say, if the members of the species are dispersed here and there without meeting).
